--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,5 +15,11 @@ if (WIN32 AND MSVC)
     add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 endif()
 
-add_executable(triangle_test ${ASR_SOURCES} tests/triangle_test.cpp)
-target_link_libraries(triangle_test ${ASR_LIBRARIES})
+add_executable(hello_world_test ${ASR_SOURCES} tests/hello_world_test.cpp)
+target_link_libraries(hello_world_test ${ASR_LIBRARIES})
+
+add_executable(circle_test ${ASR_SOURCES} tests/circle_test.cpp)
+target_link_libraries(circle_test ${ASR_LIBRARIES})
+
+add_executable(rectangle_test ${ASR_SOURCES} tests/rectangle_test.cpp)
+target_link_libraries(rectangle_test ${ASR_LIBRARIES})
