--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,22 @@ project(asr)
 
 set(CMAKE_CXX_STANDARD 17)
 set(ASR_SOURCES "include/asr.h")
-set(ASR_LIBRARIES "GLEW::GLEW" "SDL2::SDL2")
+set(ASR_LIBRARIES "GLEW::GLEW" "SDL2::SDL2" "glm::glm")
 
 find_package(GLEW REQUIRED)
 find_package(SDL2 REQUIRED)
+find_package(glm  REQUIRED)
 include_directories("./include")
 
-add_executable(triangle_test ${ASR_SOURCES} "tests/triangle_test.cpp")
-target_link_libraries(triangle_test ${ASR_LIBRARIES})
+if (WIN32 AND MSVC)
+    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+endif()
 
-# TODO
+add_executable(hello_world_test ${ASR_SOURCES} "tests/hello_world_test.cpp")
+target_link_libraries(hello_world_test ${ASR_LIBRARIES})
+
+add_executable(circle_test ${ASR_SOURCES} "tests/circle_test.cpp")
+target_link_libraries(circle_test ${ASR_LIBRARIES})
+
+add_executable(rectangle_test ${ASR_SOURCES} "tests/rectangle_test.cpp")
+target_link_libraries(rectangle_test ${ASR_LIBRARIES})
